# FastCodeHighlight

./: CMakeLists.txt  README.md
3dparty/lib/oniguruma/windows/msvc/debug/: onig.lib
3dparty/lib/oniguruma/windows/msvc/release/: onig.lib
3dparty/lib/reflex/windows/msvc/release/: reflex_static_lib.lib
platform/Android/: settings.gradle
platform/Android/app/: build.gradle
platform/Android/app/src/main/: AndroidManifest.xml
platform/Android/fast-code-highlight/: build.gradle
platform/Android/fast-code-highlight/src/main/cpp/: JniUtil.h
platform/Android/gradle/: libs.versions.toml
src/core/: foundation.cpp  global.cpp  highlight.cpp  util.cpp
src/include/: engine.h  foundation.h  highlight.h  macro.h  util.h
tests/: CMakeLists.txt  highlight_test.cpp  parse_rule.cpp  patch_text.cpp  test_patch.cpp
tests/syntax/: java.json  test.java
